# web-loteriappl

./: Procfile  README.md  pyproject.toml  requeriments.txt  requeriments.txt.txt  requirements.txt
.github/workflows/: web-mybuild.yml
src/: main.py
src/core/: adivinanza.py  cadena_utils.py  charada_utils.py  coti_chiquita.py  los_pasos.py  miami_fla.py  modelo_fijo_mlp_ia.py  numero_suerte.py  otras_adivinanzas.py  patrones_colores.py  predecir_fijos.py  predecir_secuencia_peso_reverso_confiansa.py  prediccion_colores.py  prediccion_estado.py  pronostico.py  utils.py
src/data/: ##actualizar_sorteos_2025.py  CadenaCharada.json  CharadaPalabra.json  actualizar_sorteos_2025.py  adivinanzas.json  charada.json  coti_chiquita.json  los_pasos.json  miami_fla.json  numeros_suerte.json  otras_adivinanzas.json  pronostico.json
src/models/: encoder.pkl  model_keras.h5  model_keras.tflite  scaler.pkl
src/views/: adivinanza_view.py  adivinanzas_view.py  cadena_charada_view.py  charada_view.py  colores_view.py  coti_chiquita_view.py  los_pasos_view.py  miami_fla_view.py  numero_suerte_view.py  otras_adivinanzas_view.py  prediccion_ia_view.py  pronostico_view.py  vista_patrones.py
